WalletKitCore/include/BRCryptoClient.h

typedef void *BRCryptoClientContext;
typedef struct BRCryptoClientCallbackStateRecord *BRCryptoClientCallbackState;
// MARK: - Get Block Number

typedef void
(*BRCryptoClientGetBlockNumberCallback) (BRCryptoClientContext context,
                                         OwnershipGiven BRCryptoWalletManager manager,
                                         OwnershipGiven BRCryptoClientCallbackState callbackState);
// MARK: - Get Transactions

typedef void
(*BRCryptoClientGetTransactionsCallback) (BRCryptoClientContext context,
                                          OwnershipGiven BRCryptoWalletManager manager,
                                          OwnershipGiven BRCryptoClientCallbackState callbackState,
                                          OwnershipKept const char **addresses,
                                          size_t addressCount,
                                          BRCryptoBlockNumber begBlockNumber,
                                          BRCryptoBlockNumber endBlockNumber);
typedef struct BRCryptoClientTransactionBundleRecord *BRCryptoClientTransactionBundle;
extern void
cwmAnnounceTransactions (OwnershipKept BRCryptoWalletManager cwm,
                         OwnershipGiven BRCryptoClientCallbackState callbackState,
                         BRCryptoBoolean success,
                         BRCryptoClientTransactionBundle *bundles,
                         size_t bundlesCount);
// MARK: - Get Transfers

typedef void
(*BRCryptoClientGetTransfersCallback) (BRCryptoClientContext context,
                                       OwnershipGiven BRCryptoWalletManager manager,
                                       OwnershipGiven BRCryptoClientCallbackState callbackState,
                                       OwnershipKept const char **addresses,
                                       size_t addressCount,
                                       BRCryptoBlockNumber begBlockNumber,
                                       BRCryptoBlockNumber endBlockNumber);
typedef struct BRCryptoClientTransferBundleRecord *BRCryptoClientTransferBundle;
extern BRCryptoClientTransferBundle
cryptoClientTransferBundleCreate (BRCryptoTransferStateType status,
                                  OwnershipKept const char *uids,
                                  OwnershipKept const char *hash,
                                  OwnershipKept const char *identifier,
                                  OwnershipKept const char *from,
                                  OwnershipKept const char *to,
                                  OwnershipKept const char *amount,
                                  OwnershipKept const char *currency,
                                  OwnershipKept const char *fee,
                                  BRCryptoTimestamp blockTimestamp,
                                  BRCryptoBlockNumber blockNumber,
                                  BRCryptoBlockNumber blockConfirmations,
                                  uint64_t blockTransactionIndex,
                                  OwnershipKept const char *blockHash,
                                  size_t attributesCount,
                                  OwnershipKept const char **attributeKeys,
                                  OwnershipKept const char **attributeVals);
extern void
cwmAnnounceTransfers (OwnershipKept BRCryptoWalletManager cwm,
                      OwnershipGiven BRCryptoClientCallbackState callbackState,
                      BRCryptoBoolean success,
                      BRCryptoClientTransferBundle *bundles,
                      size_t bundlesCount);
// MARK: - Submit Transaction

typedef void
(*BRCryptoClientSubmitTransactionCallback) (BRCryptoClientContext context,
                                            OwnershipGiven BRCryptoWalletManager manager,
                                            OwnershipGiven BRCryptoClientCallbackState callbackState,
                                            OwnershipKept const uint8_t *transaction,
                                            size_t transactionLength);
// MARK: - Estimate Transaction Fee

typedef void
(*BRCryptoClientEstimateTransactionFeeCallback) (BRCryptoClientContext context,
                                                 OwnershipGiven BRCryptoWalletManager manager,
                                                 OwnershipGiven BRCryptoClientCallbackState callbackState,
                                                 OwnershipKept const uint8_t *transaction,
                                                 size_t transactionLength,
                                                 OwnershipKept const char *hashAsHex);
extern void
cwmAnnounceEstimateTransactionFee (OwnershipKept BRCryptoWalletManager cwm,
                                   OwnershipGiven BRCryptoClientCallbackState callbackState,
                                   BRCryptoBoolean success,
                                   uint64_t costUnits,
                                   size_t attributesCount,
                                   OwnershipKept const char **attributeKeys,
                                   OwnershipKept const char **attributeVals);
// MARK: - Currency

typedef struct BRCryptoClientCurrencyBundleRecord *BRCryptoClientCurrencyBundle;
typedef struct BRCryptoCliehtCurrencyDenominationBundleRecord *BRCryptoClientCurrencyDenominationBundle;
extern BRCryptoClientCurrencyBundle
cryptoClientCurrencyBundleCreate (const char *id,
                                  const char *name,
                                  const char *code,
                                  const char *type,
                                  const char *blockchainId,
                                  const char *address,
                                  bool verified,
                                  size_t denominationsCount,
                                  BRCryptoClientCurrencyDenominationBundle *denominations);
extern void
cwmAnnounceCurrencies (BRCryptoSystem system,
                       OwnershipGiven BRCryptoClientCurrencyBundle *bundles,
                       size_t bundlesCount);
typedef struct {
    BRCryptoClientContext context;
    BRCryptoClientGetBlockNumberCallback  funcGetBlockNumber;
    BRCryptoClientGetTransactionsCallback funcGetTransactions;
    BRCryptoClientGetTransfersCallback funcGetTransfers;
    BRCryptoClientSubmitTransactionCallback funcSubmitTransaction;
    BRCryptoClientEstimateTransactionFeeCallback funcEstimateTransactionFee;
} BRCryptoClient;