WalletKitCore/include/BRCryptoWallet.h

    extern BRCryptoTransferAttributeValidationError
    cryptoWalletValidateTransferAttributes (BRCryptoWallet wallet,
                                            size_t attributesCount,
                                            OwnershipKept BRCryptoTransferAttribute *attribute,
                                            BRCryptoBoolean *validates);
    /**
     * Create a transfer.
     *
     * @param wallet The wallet providing the amount
     * @param target The target address; this must be consistent with the provied wallet's address
     * @param amount the amount to transfer
     * @param estimatedFeeBasis the fees one is willing to
     *
     * @return the transfer or NULL
     */
    extern BRCryptoTransfer
    cryptoWalletCreateTransfer (BRCryptoWallet wallet,
                                BRCryptoAddress target,
                                BRCryptoAmount amount,
                                BRCryptoFeeBasis estimatedFeeBasis,
                                size_t attributesCount,
                                OwnershipKept BRCryptoTransferAttribute *attributes);